--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
           jwk-set-uri: https://www.googleapis.com/oauth2/v3/certs
   cloud:
     gateway:
-      filters:
+      default-filters:
         - name: Retry
           args:
             retries: 3
