Edit catalog route path

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,6 @@ spring:
               basedOnPreviousValue: false
       routes:
         - id: catalog-route
-          uri: ${CATALOG_SERVICE:http://localhost:8081}
+          uri: ${CATALOG_SERVICE_URL:http://localhost:8081}
           predicates:
-            - Path=/api/books**
+            - Path=/api/catalog/books**
