--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,12 +22,12 @@ spring:
         - id: catalog-route
           uri: ${CATALOG_SERVICE_URL:http://localhost:8081}
           predicates:
-            - Path=/api/catalog/books**
+            - Path=/api/catalog/books/**
         - id: search-route
           uri: ${SEARCH_SERVICE_URL:http://localhost:8082}
           predicates:
-            - Path=/api/search**
+            - Path=/api/search/**
         - id: rental-route
           uri: ${RENTAL_SERVICE_URL:http://localhost:8083}
           predicates:
-            - Path=/api/rental**
+            - Path=/api/rental/**
