--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,9 @@
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2021.0.1</spring-cloud.version>
+		<sonar.organization>productdock</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+		<sonar.projectKey>ProductDock_rbc-library-gateway</sonar.projectKey>
 	</properties>
 	<dependencies>
 		<dependency>
