--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,14 @@ spring:
               basedOnPreviousValue: false
       routes:
         - id: catalog-route
-          uri: ${CATALOG_SERVICE:http://localhost:8081}
+          uri: ${CATALOG_SERVICE_URL:http://localhost:8081}
           predicates:
-            - Path=/api/books**
+            - Path=/api/catalog/books/**
+        - id: search-route
+          uri: ${SEARCH_SERVICE_URL:http://localhost:8082}
+          predicates:
+            - Path=/api/search/**
+        - id: rental-route
+          uri: ${RENTAL_SERVICE_URL:http://localhost:8083}
+          predicates:
+            - Path=/api/rental/**
