--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Gateway for RBC library</description>
 	<properties>
 		<java.version>17</java.version>
+		<mapstruct.version>1.4.2.Final</mapstruct.version>
 		<spring-cloud.version>2021.0.1</spring-cloud.version>
 		<sonar.organization>productdock</sonar.organization>
 		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
@@ -65,9 +66,24 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-contract-stub-runner</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct</artifactId>
+			<version>${mapstruct.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mapstruct</groupId>
+			<artifactId>mapstruct-processor</artifactId>
+			<version>${mapstruct.version}</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
