--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,12 @@ spring:
           uri: ${RENTAL_SERVICE_URL:http://localhost:8083}
           predicates:
             - Path=/api/rental/**
+catalog:
+  service:
+    url: ${CATALOG_SERVICE_URL:http://localhost:8081}
+rental:
+  service:
+    url: ${RENTAL_SERVICE_URL:http://localhost:8083}
+inventory:
+  service:
+    url: ${INVENTORY_SERVICE_URL:http://localhost:8084}
