--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,6 +2,7 @@ spring:
   cloud:
     gateway:
       default-filters:
+        - SaveSession
         - name: Retry
           args:
             retries: 3
