--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -26,6 +26,8 @@ spring:
           uri: ${RENTAL_SERVICE_URL:http://localhost:8083}
           predicates:
             - Path=/api/rental/**
+          filters:
+            - name: TokenRelay
 catalog:
   service:
     url: ${CATALOG_SERVICE_URL:http://localhost:8082}
