--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,6 +28,18 @@ spring:
             - Path=/api/rental/**
           filters:
             - name: TokenRelay
+
+  redis:
+    connection-timeout: 30s
+    host: localhost
+    port: 6379
+    timeout: 5s
+  session:
+    store-type: redis
+    timeout: 10m
+    redis:
+      namespace: library:gateway
+
 catalog:
   service:
     url: ${CATALOG_SERVICE_URL:http://localhost:8082}
