--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,15 +6,13 @@ spring:
           google:
             client-id: ${GOOGLE_CLIENT_ID:817921738258-cp6qkk9avb03ciibflfltdjdummgqb5p.apps.googleusercontent.com}
             client-secret: ${GOOGLE_CLIENT_SECRET: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}
-            scope: openid, profile, email
-        provider:
-          google:
-            issuer-uri: accounts.google.com
+            scope: openid, email, profile
 
   cloud:
     gateway:
       default-filters:
         - SaveSession
+        - RemoveRequestHeader=Cookie
         - name: Retry
           args:
             retries: 3
@@ -30,6 +28,8 @@ spring:
           uri: ${CATALOG_SERVICE_URL:http://localhost:8082}
           predicates:
             - Path=/api/catalog/books/**
+          filters:
+            - name: Jwt
         - id: search-route
           uri: ${SEARCH_SERVICE_URL:http://localhost:8081}
           predicates:
@@ -39,7 +39,7 @@ spring:
           predicates:
             - Path=/api/rental/**
           filters:
-            - name: TokenRelay
+            - name: Jwt
 
   redis:
     connection-timeout: 30s
@@ -61,3 +61,9 @@ rental:
 inventory:
   service:
     url: ${INVENTORY_SERVICE_URL:http://localhost:8084}
+
+logging:
+  level:
+    org:
+      springframework:
+        security: DEBUG
