--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,9 @@ spring:
             client-id: ${GOOGLE_CLIENT_ID:817921738258-cp6qkk9avb03ciibflfltdjdummgqb5p.apps.googleusercontent.com}
             client-secret: ${GOOGLE_CLIENT_SECRET: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}
             scope: openid, email, profile
+  data:
+    rest:
+      base-path: /api
 
   cloud:
     gateway:
@@ -61,9 +64,3 @@ rental:
 inventory:
   service:
     url: ${INVENTORY_SERVICE_URL:http://localhost:8084}
-
-logging:
-  level:
-    org:
-      springframework:
-        security: DEBUG
