use UserProfileJwt terminology instead of Jwt only

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
       default-filters:
         - SaveSession
         - RemoveRequestHeader=Cookie
-        - Jwt
+        - UserProfileJwt
         - name: Retry
           args:
             retries: 3
