revert name of the filter to Jwt, it works out of the box

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,7 +23,7 @@ spring:
       default-filters:
         - SaveSession
         - RemoveRequestHeader=Cookie
-        - UserProfileJwt
+        - Jwt
         - name: Retry
           args:
             retries: 3
