--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,19 @@
 spring:
   security:
     oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: accounts.google.com
-          jwk-set-uri: https://www.googleapis.com/oauth2/v3/certs
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID:817921738258-cp6qkk9avb03ciibflfltdjdummgqb5p.apps.googleusercontent.com}
+            client-secret: ${GOOGLE_CLIENT_SECRET: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}
+            scope: openid, email, profile
+
   cloud:
     gateway:
       default-filters:
+        - SaveSession
+        - RemoveRequestHeader=Cookie
+        - Jwt
         - name: Retry
           args:
             retries: 3
@@ -31,6 +37,22 @@ spring:
           uri: ${RENTAL_SERVICE_URL:http://localhost:8083}
           predicates:
             - Path=/api/rental/**
+        - id: user-profiles-route
+          uri: ${USER_PROFILES_SERVICE_URL:http://localhost:8085}
+          predicates:
+            - Path=/api/user-profiles/**
+
+  redis:
+    connection-timeout: 30s
+    host: localhost
+    port: 6379
+    timeout: 5s
+  session:
+    store-type: redis
+    timeout: 10m
+    redis:
+      namespace: library:gateway
+
 catalog:
   service:
     url: ${CATALOG_SERVICE_URL:http://localhost:8082}
@@ -40,3 +62,10 @@ rental:
 inventory:
   service:
     url: ${INVENTORY_SERVICE_URL:http://localhost:8084}
+user-profiles:
+  service:
+    url: ${USER_PROFILES_SERVICE_URL:http://localhost:8085}
+
+security:
+  front-to-gateway:
+    redirect-uri: http://localhost:3000
