--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,7 +1,11 @@
-cors:
-  allowed:
-    origins: ${client.app.url:http://localhost:3000}
+SEARCH_SERVICE_URL: http://localhost:8081
+CATALOG_SERVICE_URL: http://localhost:8082
+RENTAL_SERVICE_URL: http://localhost:8083
+INVENTORY_SERVICE_URL: http://localhost:8084
+USER_PROFILES_SERVICE_URL: http://localhost:8085
+FRONTEND_URL: http://localhost:3000
 
-security:
-  front-to-gateway:
-    redirect-uri: ${client.app.url:http://localhost:3000}
+MONGO_SERVER_URL: localhost
+MONGO_SERVER_PORT: 28017
+MONGO_USERNAME: root
+MONGO_PASSWORD: root1
