--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,14 +1,14 @@
-spring:
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: http://placeholder
-          jwk-set-uri: http://placeholder
-cors:
-  allowed:
-    origins: http://localhost:3000
+GOOGLE_CLIENT_ID: http://placeholder
+GOOGLE_CLIENT_SECRET: http://placeholder
 
-security:
-  front-to-gateway:
-    redirect-uri: http://localhost:3000
+SEARCH_SERVICE_URL: http://localhost:8081
+CATALOG_SERVICE_URL: http://localhost:8082
+RENTAL_SERVICE_URL: http://localhost:8083
+INVENTORY_SERVICE_URL: http://localhost:8084
+USER_PROFILES_SERVICE_URL: http://localhost:8085
+FRONTEND_URL: http://localhost:3000
+
+MONGO_SERVER_URL: localhost
+MONGO_SERVER_PORT: 28017
+MONGO_USERNAME: root
+MONGO_PASSWORD: root1
