--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -75,3 +75,20 @@ cors:
 security:
   front-to-gateway:
     redirect-uri: ${FRONTEND_URL}
+
+management:
+  server:
+    port: 8087
+  endpoint:
+    health:
+      show-details: always
+    prometheus:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  metrics:
+    export:
+      prometheus:
+        enabled: true
