--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -75,3 +75,14 @@ cors:
 security:
   front-to-gateway:
     redirect-uri: ${FRONTEND_URL}
+
+management:
+  server:
+    port: 8087
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include: '*'
