--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
         - id: catalog-route
           uri: ${CATALOG_SERVICE_URL}
           predicates:
-            - Path=/api/catalog/books/**
+            - Path=/api/catalog/**
         - id: search-route
           uri: ${SEARCH_SERVICE_URL}
           predicates:
