--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -45,7 +45,7 @@ spring:
         - id: inventory-route
           uri: ${INVENTORY_SERVICE_URL}
           predicates:
-            - Path=/api/inventory/subscriptions/**
+            - Path=/api/inventory/**
 
   data:
     mongodb:
